2004-03-06  Philip Blundell  <philb@gnu.org>

	* Version 0.51 released

2004-03-05  Philip Blundell  <philb@gnu.org>

	* event-ui.c: Include pim-categories-ui.h to fix warning.
	(edit_event): Exercise caution around details struct since
	pointers may be NULL.
	(click_delete): Remove useless call to gtk_widget_get_toplevel.

2004-02-23  Joseph J. McCarthy <mccarthy@engrng.pitt.edu>
                                                                                
        * Version 0.50 released.
                                                                                
2004-02-22  Phil Blundell  <pb@nexus.co.uk>

	* Makefile (CPPFLAGS, LDFLAGS): Add libgpepimc.
	* main.c (main): Call gpe_pim_categories_init().
	* event-ui.c (struct edit_state): Add categories,
	categories_label.
	(destroy_user_data): Handle categories.
	(click_ok): Stash new categories.
	(build_categories_string): New.
	(update_categories): Likewise.
	(click_categories): Likewise.
	(build_edit_event_window): Add categories handling.	

2004-02-20  Joseph J. McCarthy <mccarthy@engrng.pitt.edu>
                                                                                
        * event-ui.c : update last_modified when changes are made 
                                                                                
2004-02-14  Philip Blundell  <philb@gnu.org>

	* Version 0.49 released.

2004-02-09  Phil Blundell  <pb@nexus.co.uk>

	* README: Delete useless empty file.
	* TODO: Delete useless outdated file.
	
	* event-ui.c (build_edit_event_window): Set default size on new
	window.

	* future_view.c (future_view): Set NEVER policy for horizontal
	scrollbar.

2004-02-08  Howell Tam	<pigeon@pigeond.net>
	
	* event-ui.c: Recurring page now shows corresponding fields properly.
	* day_popup.c: Likewise.
	* day_view.c: Likewise.
	* future_view.c: Likewise.
	* main.c: Likewise.
	* event-ui.c: Recurrence page now in a scrolled window.

2003-10-19  Philip Blundell  <philb@gnu.org>
